--- a/trabajo.html
+++ b/trabajo.html
@@ -190,7 +190,7 @@
 
                                             <!--Introduction-->
                                             <section class="ux-portfolio-template-intro">
-                                                <p style="text-align: left;"><span style="font-size:24px">We are Air A creative design agency based in NewYork. We do live art, illustration, web design, App design and everything in between.</span></p>
+                                                <p style="text-align: left;"><span style="font-size:24px">Estos son algunos de mis proyectos. Echa un vistazo!</span></p>
                                             </section>
 
                                             <!--Filter-->
