--- a/perfil.html
+++ b/perfil.html
@@ -211,7 +211,7 @@
 
                                         	<!-- Agency Background -->
 
-                                        	<h4 class="title-wrap-tit">Trabajo para Agencias y empresas</h4>
+                                        	<h4 class="title-wrap-tit">Otras participaciones</h4>
 
                                         	<br>
 
@@ -273,7 +273,7 @@
 							                    <a class="client-logo mouseover-2"><img src="img/log/Tigo.png" alt="" /></a>
 							                </div>
 							                <div class="col-xs-6 col-sm-3">
-							                    <a class="client-logo mouseover-2"><img src="img/log/Pg.png" alt="" /></a>
+							                    <a class="client-logo mouseover-2"><img src="img/log/PG.png" alt="" /></a>
 							                </div>
 							                <div class="col-xs-6 col-sm-3">
 							                    <a class="client-logo mouseover-2"><img src="img/log/Shell.png" alt="" /></a>
