--- a/perfil.html
+++ b/perfil.html
@@ -350,8 +350,8 @@
                             <div class="footer-container">
                                 <div class="span6">
                                     <div id="logo-footer">
-                                        <a href="http://themes.uiueux.com/air/" title="Air Theme">
-                                            <img class="logo-footer-img" src="img/demo/logo_dark.png" alt="Air Theme" />
+                                        <a  href="index.html" title="Ir al inicio">
+                                            <img class="logo-footer-img" src="img/demo/logo_dark.png" alt="" />
                                         </a>
                                     </div>
                                 </div>
