--- a/perfil.html
+++ b/perfil.html
@@ -204,8 +204,8 @@
                                         	<br></br>
 
                                                  
-                                        	   <a title="estefania.mejia.q@gmail.com" href="mailto:estefania.mejia.q@gmail.com">
-							   <span class="socialmeida-text">estefania.mejia.q@gmail.com</span>
+                                        	   <a href="mailto:estefania.mejia.q@gmail.com">
+							  estefania.mejia.q@gmail.com
                                               
                                             </a>
 
