--- a/perfil.html
+++ b/perfil.html
@@ -204,20 +204,20 @@
                                         	<br></br>
 
                                                  
-                                        	   <a href="mailto:estefania.mejia.q@gmail.com">
-							  estefania.mejia.q@gmail.com
-                                              
-                                            </a>
+                                        	   <a href="mailto:estefania.mejia.q@gmail.com"> estefania.mejia.q@gmail.com</a>
+
 
                                         	<br></br>
 
                                         	<!-- Agency Background -->
 
-                                        	<h4 class="title-wrap-tit">Otras participaciones</h4>
+                                        	<h5 class="title-wrap-tit">Otras participaciones</h5>
 
                                         	<br>
 
-                                            <p>A lo largo de mi experiencia laboral, he trabajado en empresas como:
+                                            <p>He estudiado y especializado en Colombia, Inglaterra, Guatemala y España. He aprendido de moverme por el mundo :)
+<br></br>
+				A lo largo de mi experiencia laboral, he trabajado en agencias y empresas como:
                                             </p>
 
                                             <br>
