--- a/campus-nova.html
+++ b/campus-nova.html
@@ -7,9 +7,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta property="og:title" content="Proyecto de Estefania Mejia" />
         <meta property="og:description" content="" />
-        <meta property="og:url" content="http://themes.uiueux.com/demo/air/entry/" />
+        <meta property="og:url" content="" />
         <meta property="og:site_name" content="Estefania Mejia - Portafolio" />
-        <meta property="og:image" content="http://themes.uiueux.com/demo/air/entry/01-cover.jpg" />
+        <meta property="og:image" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <!-- Favicon -->
