--- a/trabajo.html
+++ b/trabajo.html
@@ -9,7 +9,7 @@
         <meta property="og:description" content="Recopilación de algunos proyectos en los que he trabajado" />
         
         <meta property="og:site_name" content="Estefania Mejia - Portafolio" />
-        <meta property="og:image" content="http://themes.uiueux.com/demo/air/entry/01-cover.jpg" />
+        <meta property="og:image" content="" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <!-- Favicon -->
@@ -351,8 +351,8 @@
                             <div class="footer-container">
                                 <div class="span6">
                                     <div id="logo-footer">
-                                        <a href="http://themes.uiueux.com/air/" title="Air Theme">
-                                            <img class="logo-footer-img" src="img/demo/logo_dark.png" alt="Air Theme" />
+                                     <a href="index.html" title="Estefania Mejia - Portafolio">
+                                            <img class="logo-footer-img" src="img/demo/logo_dark.png" alt="Estefania" />
                                         </a>
                                     </div>
                                 </div>
