--- a/trabajo.html
+++ b/trabajo.html
@@ -241,9 +241,8 @@
                                                         </div>
                                                     </div>
                     
-                                                    <div class="brick-content ux-lazyload-wrap" style=" padding-top: 75.384615384615%;">
-                                                        <div class="ux-lazyload-bgimg ux-background-img" data-bg="img/project/exposed/thumb.jpg"></div>
-                                                    </div>
+                                                          <div class="brick-content ux-lazyload-wrap" style=" padding-top: 75.384615384615%;">
+                                                        <div class="ux-lazyload-bgimg ux-background-img" data-bg="img/project/mineria/thumb2.gif"></div>
                                 
                                                 </div><!--End inside-->
 
