--- a/trabajo.html
+++ b/trabajo.html
@@ -270,7 +270,7 @@
                                             </section>
             
                                              
-                                            <section class="grid-item grid-item-small filter_wearable filter_investigacion filter_works filter_post-format-gallery" data-postid="198">
+                                            <section class="grid-item grid-item-big filter_wearable filter_investigacion filter_works filter_post-format-gallery" data-postid="198">
                                                 <div class="grid-item-inside" >
                                                     <div class="grid-item-con">
                                                         <a href="" title="Anomaly" class="grid-item-mask-link grid-item-open-url"></a>
