--- a/trabajo.html
+++ b/trabajo.html
@@ -210,7 +210,7 @@
                                         <!--Portfolio Listing-->
                                         <div class="masonry-list masonry-grid grid-mask-boxed-center">
  
- 					<section class="grid-item grid-item-tall filter_design filter_works filter_post-format-gallery" data-postid="97">
+ 					<section class="grid-item grid-item-tall filter_wearable filter_investigacion filter_works filter_post-format-gallery" data-postid="97">
                                                 <div class="grid-item-inside" >
                                                     <div class="grid-item-con">
                                                         <a href="#" title="Un Cuerpo Dentro de Otro Cuerpo" class="grid-item-mask-link grid-item-open-url"></a>
