--- a/trabajo.html
+++ b/trabajo.html
@@ -217,7 +217,7 @@
                                                                                 
                                                         <div class="grid-item-con-text">
                                                             <span class="grid-item-cate"><a href="#" title="Ver todos los proyectos de Diseño" class="grid-item-cate-a" data-filter=".filter_design">Diseño</a></span>
-                                                            <h2 class="grid-item-tit"><a href="#" title="UCDOC" class="grid-item-tit-a">Un Cuerpo Dentro de Otro Cuerpo</a></h2>
+                                                            <h2 class="grid-item-tit"><a href="ucdoc.html" title="UCDOC" class="grid-item-tit-a">Un Cuerpo Dentro de Otro Cuerpo</a></h2>
                                                         </div>
                                                     </div>
                                                     
