--- a/trabajo.html
+++ b/trabajo.html
@@ -213,7 +213,7 @@
  					<section class="grid-item grid-item-tall filter_wearable filter_investigacion filter_works filter_post-format-gallery" data-postid="97">
                                                 <div class="grid-item-inside" >
                                                     <div class="grid-item-con">
-                                                        <a href="#" title="Un Cuerpo Dentro de Otro Cuerpo" class="grid-item-mask-link grid-item-open-url"></a>
+                                                        <a href="ucdoc.html" title="Un Cuerpo Dentro de Otro Cuerpo" class="grid-item-mask-link grid-item-open-url"></a>
                                                                                 
                                                         <div class="grid-item-con-text">
                                                             <span class="grid-item-cate"><a href="#" title="Ver todos los proyectos de Diseño" class="grid-item-cate-a" data-filter=".filter_design">Diseño</a></span>
