--- a/trabajo.html
+++ b/trabajo.html
@@ -222,7 +222,7 @@
                                                     </div>
                                                     
                                                     <div class="brick-content ux-lazyload-wrap" style=" padding-top: 150.09523809524%;">
-                                                        <div class="ux-lazyload-bgimg ux-background-img" data-bg="img/project/udoc/thumb.jpg"></div>
+                                                        <div class="ux-lazyload-bgimg ux-background-img" data-bg="img/project/ucdoc/thumb.jpg"></div>
                                                     </div>
                                                                 
                                                 </div><!--End inside-->
