--- a/trabajo.html
+++ b/trabajo.html
@@ -273,7 +273,7 @@
                                             <section class="grid-item grid-item-long filter_wearable filter_investigacion filter_works filter_post-format-gallery" data-postid="198">
                                                 <div class="grid-item-inside" >
                                                     <div class="grid-item-con">
-                                                        <a href="#" title="Anomaly" class="grid-item-mask-link grid-item-open-url"></a>
+                                                        <a href="anomaly.html" title="Anomaly" class="grid-item-mask-link grid-item-open-url"></a>
                                                                                 
                                                         <div class="grid-item-con-text">
                                                             <span class="grid-item-cate"><a href="#" title="Ver todos los proyectos de Wearables" class="grid-item-cate-a" data-filter=".filter_wearable">Wearables, </a>
