--- a/perfil.html
+++ b/perfil.html
@@ -197,7 +197,7 @@
 
                                             Con +10 años de experiencia en diseño en distintos canales, mi trayectoria profesional se ha concentrado en explorar el entorno digital como una herramienta para potenciar procesos de comunicación.<br></br>
 
-                                        	Me apasiona la interacción humano-computador, la investigación, y la experimentación con materiales. Tengo un alto interés y experiencia en investigar el diseño desde diferentes disciplinas: bio materiales, textiles electrónicos, UX/UI, coordinación creativa y, planeación, gestión y ejecución de proyectos en el área digital.<br>
+                                        	Me apasiona la interacción humano-computador, la investigación, y la experimentación con materiales. Tengo un alto interés y experiencia en investigar el diseño desde diferentes disciplinas: bio materiales, textiles electrónicos, UX/UI, coordinación creativa y, planeación, gestión y ejecución de proyectos en el área digital.<br></br>
 
                                         	<b>Para nuevos proyectos o colaboraciones:</b>
                                         	
