--- a/perfil.html
+++ b/perfil.html
@@ -214,7 +214,7 @@
 
                                                 <!-- Agency Background -->
 
-                                                <h5 class="title-wrap-tit">Otros datos</h5>
+                                                <h5 class="title-wrap-tit">+datos</h5>
 
                                                 <br>
 
