--- a/perfil.html
+++ b/perfil.html
@@ -172,7 +172,7 @@
                 <div id="wrap">
 
                     <!--Page Cover-->
-                    <div class="post-cover ux-lazyload-wrap fullscreen-wrap"><div class="ux-lazyload-bgimg ux-background-img" data-bg="img/demo/perfil.jpg"></div></div>
+                    <div class="post-cover ux-lazyload-wrap fullscreen-wrap"><div class="ux-lazyload-bgimg ux-background-img" data-bg="img/demo/perfil_.jpg"></div></div>
 
                     <!-- Main Content : List, text content ... -->
                     <div id="content">
