--- a/matlab.html
+++ b/matlab.html
@@ -215,7 +215,7 @@ El laboratorio se consolidó como un espacio interdisciplinario donde convergía
                                            
                                             <li class="gallery-info-property-li col-md-3 col-sm-3"><h3 class="gallery-info-property-item gallery-info-property-tit">Año</h3><div class="gallery-info-property-item gallery-info-property-con">2024</div></li>
 
-                                             <li class="gallery-info-property-li col-md-3 col-sm-3"><h3 class="gallery-info-property-item gallery-info-property-tit">Rol</h3><div class="gallery-info-property-item gallery-info-property-con">Diseño, I+D, Dirección</div></li>
+                                             <li class="gallery-info-property-li col-md-3 col-sm-3"><h3 class="gallery-info-property-item gallery-info-property-tit">Rol</h3><div class="gallery-info-property-item gallery-info-property-con">Bio-material expert, I+D, Dirección</div></li>
                                        </ul>
 
                                     </div>
